k8s/manifests-4494ee/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-4494ee
  namespace: journee
  labels:
    app: journee-4494ee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-4494ee
  template:
    metadata:
      labels:
        app: journee-4494ee
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-4494ee
          image: gcr.io/my-docker-471807/journee:4494ee-a2b131
          ports:
            - containerPort: 3000
