k8s/manifests-4494ee/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-4494ee
  namespace: journee
spec:
  selector:
    app: journee-4494ee
  ports:
    - port: 80
      targetPort: 3000
